# CppTemplateX

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: eigen.cmake
include/kfgins_task/: interface.h
internal/: CMakeLists.txt
internal/kfgins_task/: CMakeLists.txt
internal/kfgins_task/calib/include/: calib.h
internal/kfgins_task/calib/src/: calib.cpp
internal/kfgins_task/common/include/: kfgins_defs.h
internal/kfgins_task/rotation/: test_rotation.cpp
internal/kfgins_task/rotation/include/: rotation.h
internal/kfgins_task/rotation/src/: rotation.cpp
internal/obgins_task/: CMakeLists.txt
internal/pimpl_task_template/: CMakeLists.txt
utils/: CMakeLists.txt  test_utils.cpp
utils/examples/: data.txt  output.txt
utils/include/: config_manager.h  fileio.h  logger.h  tictoc.h
utils/src/: config_manager.cpp  fileio.cpp  logger.cpp  tictoc.cpp
